[tool.poetry]
name = "discord_markdown_ast_parser"
version = "1.0.6"
description = "Markdown Parser for Discord messages that creates an abstract syntax tree"
authors = ["Tim Schmidt <w4rum@khorne.faith>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/w4rum/discord-markdown-ast-parser"
repository = "https://github.com/w4rum/discord-markdown-ast-parser"
documentation = "https://github.com/w4rum/discord-markdown-ast-parser"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = { version = "^21.5b1", extras = ["d"] }
mypy = "^0.910"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
